--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,37 @@
 * {
   box-sizing: border-box;
 }
+/* Custom scrollbar width */
+::-webkit-scrollbar {
+  width: 6px; /* Lățimea scrollbar-ului */
+}
+
+/* Background-ul scrollbar-ului */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Fundalul pistei scrollbar-ului */
+}
+
+/* Thumb-ul (bara care se deplasează) scrollbar-ului */
+::-webkit-scrollbar-thumb {
+  background: gray; /* Culoarea thumb-ului */
+  border-radius: 8px; /* Colțuri rotunjite pentru thumb */
+}
+
+/* Thumb-ul scrollbar-ului la hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ff533d; /* Culoarea thumb-ului când este hover */
+}
 
 body {
-  margin: 0; /* Removed the erroneous '=' */
-  background-color: #c0c0c0;
+  margin: 0;
+  background-color: #e9e4e4;
   font-size: 18px;
   font-family: "Noto Sans", sans-serif;
 }
 
 header {
   height: 70px;
-  background-color: #121C31;
+  background-color: #121c31;
   position: fixed;
   width: 100%;
   padding-left: 30px;
@@ -22,49 +42,142 @@ header {
 }
 
 header a {
-  color: #FFFFFF; /* Set a proper color for text */
-  text-decoration: none; /* Fixed typo 'text-decorection' */
+  color: #ffffff;
+  text-decoration: none;
 }
-.page-container {
-	min-height: 100vh; 
-	padding-top: 70px;
-}
-main {
-	margin: 1px 10% 60px 220px;
-	padding: 0px 25px; 
 
+.page-container {
+  min-height: 100vh;
+  padding-top: 70px;
 }
+
+main {
+  margin: 1px 10% 60px 220px;
+  padding: 0px 25px;
+}
+
 aside {
-	width: 190px;
-	height: 100vh;
-	position: fixed;
-	background: linear-gradient(to bottom, #18243f, #30415d); /* Added missing semicolon */
-	padding-top: 10px;
-	font-size: 20px;
-  }
-  aside a {
-	display: block;
-	color: #FFFFFF;
-	text-transform: uppercase;
-	text-decoration: none; 
-	text-align: center;
-	margin-top: 35px;
-  }
-  aside i {
-	margin-left: 11px; 
-  }
+  width: 190px;
+  height: 100vh;
+  position: fixed;
+  background: linear-gradient(to bottom, #18243f, #2b3e5b);
+  padding-top: 10px;
+  font-size: 20px;
+}
+
+aside a {
+  display: block;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+  margin-top: 35px;
+}
+
+aside i {
+  margin-left: 11px;
+}
 
 .logo {
   margin-left: 5px;
   font-size: 28px;
-  color:  color: #ebe409; /* Set a proper color for text */
+  color: #ebe409;
 }
+
 p {
-	 line-height: 150%; 
+  line-height: 170% !important;
+  border-left: 6px solid #ff533d !important;
+  padding-left: 12px !important;
+}
+.row {
+  overflow: auto;
+}
+
+[class^="col-"] {
+  float: left;
+  padding: 5px;
+}
+
+.col-10 {
+  width: 10%;
+}
+.col-20 {
+  width: 20%;
+}
+.col-30 {
+  width: 30%;
+}
+.col-40 {
+  width: 40%;
+}
+.col-50 {
+  width: 50%;
+}
+.col-60 {
+  width: 60%;
+}
+
+.col-70 {
+  width: 70%;
+}
+.col-80 {
+  width: 80%;
+}
+
+.col-90 {
+  width: 90%;
+}
+.col-100 {
+  width: 100%;
 }
 .title {
-	border-bottom: 4px solid #ff533d;
-	margin-bottom: 5px; 
-	margin-top: 10px; 
-	display: inline-block; 
+  border-bottom: 4px solid #ff533d;
+  margin-bottom: 5px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+.intro-video {
+  display: block;
+  height: 50vh;
+  margin: 40px auto;
+  max-width: 100%;
+  border-radius: 20px;
+  transition: all 0.3s;
+}
+
+.intro-video:hover {
+  transform: scale(1.1);
+  transition: all 0.3s;
+}
+
+.gallery {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 40px;
+  background-color: #d9dce1;
+}
+
+.gallery img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 20px;
+  transition: all 1s;
+}
+.gallery img:hover {
+  transform: scale(1.1);
+  transition: all 1s;
+}
+. row-event {
+  margin-top: 20px;
+}
+.event {
+  padding: 0px 15px 15px 15px;
+  background-color: #d4d4d4;
+  border-radius: 20px;
+  border: 1px solid #ff533d;
+  height: 250px;
+  overflow-y: scroll;
 }
