--- a/css/style.css
+++ b/css/style.css
@@ -279,8 +279,7 @@ p {
 
   main {
     margin: 0px;
-    padding-top: 10px;
-    padding-bottom: 15px;
+    padding: 10px 15px 20px 15px; 
   }
 
   aside {
